# thlauh

./: README.md  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_server.rs  lib.rs  main.rs  mdns.rs  network.rs  portal.rs
src/components/app/: FilesList.tsx  Header.tsx  ServerConfig.tsx
src/components/ui/: popover.tsx
updater/: latest.json
