[package]
name = "thlauh-share"
version = "0.1.0"
description = "Thlauh! file share na"
authors = ["mahmingtea"]
edition = "2021"

[lib]
name = "thlauh_share_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
notify = "8"
sha2 = "0.10"
hex = "0.4"
mdns-sd = "0.12"
local-ip-address = "0.6"
percent-encoding = "2"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
form_urlencoded = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
